# text-2-query

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  commit.sh  dev.Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: home.py  question.py
app/core/: config.py
app/db/: base.py  session.py
app/messages/: messages.py
app/models/: __init__.py
app/schemas/: __init__.py  input_model.py  response_model.py
app/services/: factory.py  language_model.py  start.py
app/vendors/: factory.py  huggingface_translate.py  input_grammar.py  translate.py  vanna_ai.py
docs/notes/: commands.txt  libs.txt  questions.txt
docs/sql/: data.sql  schema.sql
scripts/: documentation.txt  execute.py  training_queries.sql  vanna_mysql_question.py  vanna_mysql_training.py
tests/: test_endpoints.py  test_home.py  test_huggingface_translate.py  test_input_grammar.py  test_language_model_service.py  test_schema_input_model.py  test_schema_response_serializer.py  test_vanna_ai.py  test_vanna_question.py
