[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Fabio de Souza Mendes <fbiosm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pymysql = "^1.1.1"
aioredis = "^2.0.1"
redis = "^5.0.7"
pydantic = {version = ">=2.8.2", extras = ["dotenv"]}
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
uvicorn = "^0.30.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
fastapi-pagination = "^0.12.26"
requests = "^2.32.3"
pytz = "^2024.1"
pika = "^1.3.2"
pandas = "^2.0.3"
pandas-schema = "^0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
autoflake = "^2.3.1"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
pre-commit = "^3.7.1"
black = "^24.4.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
anyio = "^4.4.0"
pytest-dependency = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "app"

[tool.flake8]
max-complexity = 7
statistics = true
max-line-length = 120

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true
